--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -12,11 +12,6 @@
     </div>
 
     <div class="flex flex-row space-x-4">
-      <%= link_to "Add activity",
-        new_project_activity_path(@project),
-        data: { turbo_frame: dom_id(Activity.new) },
-        class: 'button' %>
-
       <%= link_to "Edit", edit_project_path(@project), 
         class: "button" %>
 
@@ -34,16 +29,20 @@
   <%= @project.description %>
 </div>
 
+<h2 class="mt-8 mb-4">To do</h2>
+
+<%= link_to "Add activity",
+  new_project_activity_path(@project),
+  data: { turbo_frame: dom_id(Activity.new) },
+  class: 'button mb-2' %>
+
 <%= turbo_frame_tag Activity.new %>
 
-<h2 class="mt-8 mb-4">To do</h2>
 <%= turbo_frame_tag "activities" do %>
   <%= render "activities/activities", activities: @activities, project: @project %>
 <% end %>
-
 
 <h2 class="mt-8 mb-4 text-slate-500">Done</h2>
 <%= turbo_frame_tag "done_activities" do %>
   <%= render "done_activities/activities", activities: @done_activities, project: @project %>
 <% end %>
-
