--- a/app/views/activities/create.turbo_stream.erb
+++ b/app/views/activities/create.turbo_stream.erb
@@ -1,4 +1,4 @@
-<%= turbo_stream.append "activities",
+<%= turbo_stream.prepend "activities",
   partial: "activities/activity",
   locals: {activity: @activity, project: @project} %>
 <%= turbo_stream.update Activity.new, "" %>
