--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -26,7 +26,8 @@
 </div>
 
 <div class="my-8">
-  <%= @project.description %>
+  <%#= @project.description %>
+  <%= truncate(strip_tags(@project.description.to_s), length: 200, separator: " ") %>
 </div>
 
 <h2 class="mt-8 mb-4">To do</h2>
