--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,8 +2,7 @@
   <%= link_to "Projects", root_path %>
 </h2>
 
-<nav class="py-4 flex flex-row bg-slate-200 space-x-4">
-
+<nav class="px-4 py-4 flex flex-row bg-slate-200 space-x-4">
   <% if current_user %>
     <%= link_to current_user.name, current_user %>
     <%= link_to "My Projects", projects_path %>
