--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,5 +3,12 @@
 
   <p>This is the Projects application.</p>
 
-  <p><%= link_to "Sign in", new_session_path, class: "text-indigo-600 underline" %> to start.</p>
+  <% unless current_user %>
+    <p>
+      <%= link_to "Sign in", new_session_path, class: "text-indigo-600 underline" %>
+      to start.
+    </p>
+  <% end %>
+
+  <%= image_tag "steve-johnson-5Oe8KFH5998-unsplash.webp" %>
 </div>
